Use isEmpty instead equals("")